# clone-pcmanfm-debian-build2

./: AUTHORS  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h.in  configure  configure.in  gtk-builder-convert  pcmanfm-ask-pass.in  pcmanfm.desktop.in  pcmanfm.glade  pcmanfm.gladep
data/: Makefile.in  pcmanfm-find.desktop.in  pcmanfm-folder-handler.desktop.in  pcmanfm.desktop  pcmanfm.desktop.in
data/ui/: Makefile.in  about-dlg.glade  about.ui  appchooserdlg.glade  file-assoc-dlg.glade  file_operation.glade  file_properties.glade  find-files.glade  godlg.glade  prefdlg.glade  remote-fs-dlg.glade
debian/: NEWS.Debian  README.Debian  changelog  control  copyright  menu  pcmanfm-nohal.menu  pcmanfm.1  pcmanfm.manpages  rules  watch
debian/patches/: 00list  01-libfm-0.1.14-API-changes.patch  01_binary_rename.patch  01_implicit-pointer-conversion.dpatch  02_desktop-entry-invalid-category.dpatch  03_correct_spelling.dpatch  04_default_terminal.dpatch  90-enable-fake-transparency.patch  libtool-fix.patch  series
debian/scripts/: genconf.sh
po/: LINGUAS  POTFILES.in  af.po  ar.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  es.gmo  es.po  et.po  eu.gmo  eu.po  fi.po  fr.gmo  fr.po  gl.po  he.gmo  he.po  hu.gmo  hu.po  id.po  it.gmo  it.po  ja.gmo  ja.po  ja.po.orig  km.po  ko.po  lt.gmo  lt.po  ms.po  nb.po  nl.po  no.gmo  no.po  (+30 more)
src/: Makefile.am  Makefile.in  app-chooser-dialog-ui.c  app-chooser-dialog-ui.h  app-chooser-dialog.c  app-chooser-dialog.h  edit-bookmarks.c  file-assoc-dlg-ui.c  file-assoc-dlg-ui.h  file-assoc-dlg.c  file-icon.c  file-icon.h  file-operation-ui.c  file-operation-ui.h  file-operation.c  file-operation.h  file-properties-ui.c  file-properties-ui.h  file-properties.c  file-properties.h  find-files.c  folder-content.c  folder-content.h  glade-support.c  input-dialog.c  input-dialog.h  main-window.c  main-window.h  main.c  mime-action.c  mime-action.h  mime-description.c  mime-description.h  pref-dialog-ui.c  pref-dialog-ui.h  pref-dialog.c  pref-dialog.c.orig  pref-dialog.h  private.h  settings.c  (+1 more)
src/compat/: glib-utils.c
src/desktop/: desktop-window.c  desktop-window.h  desktop.c  desktop.h  fm-desktop.c  fm-desktop.h
src/exo-icon-view/: exo-icon-view.h
src/mime-type/: mime-action.c  mime-action.h  mime-cache.c  mime-type.c  test.c
src/mime-type/old/: glob.c  glob.h  magic.c  magic.h  mime.c  mime.h
src/ptk/: exo-string.c  exo-string.h  ptk-app-chooser.c  ptk-app-chooser.h  ptk-bookmarks.c  ptk-bookmarks.h  ptk-clipboard.c  ptk-console-output.c  ptk-dir-tree-view.c  ptk-dir-tree-view.h  ptk-dir-tree.c  ptk-file-archiver.c  ptk-file-browser.c  ptk-file-browser.h  ptk-file-icon-renderer.c  ptk-file-icon-renderer.h  ptk-file-list.c  ptk-file-list.h  ptk-file-menu.c  ptk-file-menu.h  ptk-file-misc.c  ptk-file-misc.h  ptk-file-properties.c  ptk-file-task.c  ptk-icon-view.c  ptk-icon-view.h  ptk-input-dialog.c  ptk-location-view.c  ptk-location-view.h  ptk-path-entry.c  ptk-remote-fs-view.c  ptk-remote-fs-view.h  ptk-remote-volume.c  ptk-remote-volume.h  ptk-text-renderer.c  ptk-tree-model-sort.c  ptk-tree-model-sort.h  ptk-utils.c  ptk-utils.h
src/ptk-ui-xml/: ptk-ui-xml.c  ptk-xml-tree.c
src/vfs/: vfs-app-desktop.c  vfs-app-desktop.h  vfs-async-task.c  vfs-dir.c  vfs-dir.h  vfs-execute.c  vfs-file-info.c  vfs-file-info.h  vfs-file-monitor.c  vfs-file-monitor.h  vfs-file-task.c  vfs-file-task.h  vfs-mime-type.c  vfs-mime-type.h  vfs-remote-fs-mgr.c  vfs-remote-fs-mgr.h  vfs-thumbnail-loader.c  vfs-utils.c  vfs-utils.h  vfs-volume-hal-options.c  vfs-volume-hal.c  vfs-volume.c  vfs-volume.h
src/xdgmime/: xdgmime.c  xdgmime.h  xdgmimealias.c  xdgmimealias.h  xdgmimecache.c  xdgmimeglob.c  xdgmimeglob.h  xdgmimeparent.c  xdgmimeparent.h
